tests/lex-fail/bad_float2.fl.0.exp
Error: bad_float2.fl(1,1): Missing fractional part of floating point literal 
10.a
^    
